deployment/istio/kiali/istio-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: istio-system
spec:
  parentRefs:
    - name: gatewayapi
      namespace: istio-system
  hostnames:
    - "kiali.k3s.dev.com"
  rules:
    - backendRefs:
        - name: kiali
          port: 20001
