deployment/istio/kiali/istio-virtualService.yaml
# virtualservice определяем правила маршрутизации
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - "kiali.k3s.dev.com"
  gateways:
    - "istio-system/gateway"
  http:
    - route:
        - destination:
            host: kiali
            port:
              number: 20001
